# TranscriptionalPlasticity-TumourModel

./: ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_MAPPING.md  CHECKLIST.md  CMakeLists.txt  Clone.cpp  Clone.h  IMPLEMENTATION_SUMMARY.md  LICENSE  OUTPUT_CONFIGURATION.md  QUICK_START.md  README.md  README.txt  README_CPP.md  README_bootstrap.md  README_bootstrap_manager.md  SIMULATOR_README.md  Treatment.cpp  Treatment.h  TumourSimulation.cpp  TumourSimulation.h  adaptive_therapy.json  additional_functionality.py  analyze_resistance_distribution.py  bootstrap_checkpoint.json  bootstrap_manager.cpp  bootstrap_percentiles.cpp  bootstrap_results.json  build_bootstrap.sh  build_resistance_emulator.py  clone.py  combination_therapy.json  compare_penalty_results.py  debug_rng_test.py  debug_simulation.py  gp_emulator.py  linear_regression_results.csv  main.cpp  mtd_absolute.json  no_treatment.json  output.prof  (+8 more)
bootstrap_results/: sample_0.json
csv_data_for_linear_regression/: s=0.001.csv  s=0.01.csv  s=0.1.csv
emulator_output/: emulator_batch_lhs_initial_consolidated_summary_20251216_213445.csv  emulator_batch_refinement_round1.json  emulator_point_0001.json  intermediate_results.csv
example_configs/: adaptive_therapy.json  combination_therapy.json  custom_output_columns.json  mtd_4billion_start.json  mtd_absolute.json  multi_condition_example.json  multi_condition_multi_replicate.json  multi_replicate_example.json  no_treatment.json  proportional_drug.json  s=0.001_distribution_fit.json  s=0.01_distribution_fit.json  test.json
output/: mtd_4billion_start_consolidated_summary_20251210_131629.csv  mtd_4billion_start_rep0_s0.01_m5e-07_stateextinct_20251210_131409.csv  mtd_4billion_start_rep0_s0.01_m5e-07_staterelapsed_20251210_131627.csv  mtd_4billion_start_rep0_summary_20251210_131409.json  mtd_4billion_start_rep0_summary_20251210_131627.json  mtd_4billion_start_rep1_summary_20251210_131418.json  mtd_4billion_start_rep2_s0.01_m5e-07_staterelapsed_20251210_131036.csv  mtd_4billion_start_rep2_s0.01_m5e-07_staterelapsed_20251210_131429.csv  (+12 more)
(+31 files in other folders)
